[package]
name = "wasm-fibonacci"
version = "0.1.0"
authors = ["Your Name <you@example.com>"]
description = "A sample project with wasm calculating fibonacci-representations of decimal numbers"
license = "MIT/Apache-2.0"
repository = "https://github.com/toppyy/wasm-fibonacci"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
